master fix extra big images on desktop and keep the non-overflowing imgs on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -87,8 +87,8 @@ p.lead {
   color: #04336b;
 }
 
-.ty-image-500 {
-  max-width: 500px;
+.img-fluid--500 {
+  width: 500px;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
