--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -86,3 +86,7 @@ p.lead {
     }
   }
 }
+
+.img-fluid--500 {
+  width: 500px;
+}
